@@ -45,8 +45,7 @@ href="http://lilypond-design.com/sponsor/">...Read more...</a> </div>
 <h2>
 Just <em>enjoying LilyPond</em>?  </h2>
 
-Pitch in a donation!  We suggest an amount of
- EUR 25.  Send it via
+Pitch in a donation!  We suggest an amount of EUR 25.  Send it via
 
 <blockquote>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post">
@@ -65,8 +64,8 @@ src="http://images.paypal.com/images/x-click-but02.gif" name="submit" alt="Make 
 </blockquote>
 
 
-<em>Don't send cheques. Nobody in the Netherlands uses them, and
-cashing a foreign cheque typically costs about EUR 20 (minimum)</em>.
+<em>Don't bother with cheques. Cashing them typically costs us about
+EUR 25</em>.
 
 </div>
 
