@@ -1,3 +1,7 @@
+2006-01-28  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* site/sponsor/options.html (src): add note about cheques
+
 2006-01-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
 	* site/about/doneet.html (Module): remove. 
